# mr_norm

./: .gitignore  SYSTEM_USAGE.md  hybrid_search.bat  pyproject.toml
planning/: README.md  llm_smoke_commands.md  overall_plan.md  retrieval_benchmark_notes.md  stage1_rtf_chunking_plan.md  stage6_runtime_layers.md
reports/: questions_diagnostic_baseline.json  questions_diagnostic_e2e_cycle.json  questions_diagnostic_final.json  questions_e2e_after_intent.json  questions_e2e_final.json  questions_polza_after_mapping.json  questions_polza_baseline.json  questions_polza_cycle2_smoke.json  questions_polza_final.json  questions_polza_q1.json  questions_polza_q1b.json  questions_polza_smoke.json
scripts/: build_knowledge_bundle.py  build_query_benchmark_100.py  run_live_llm_smoke.py  run_questions_diagnostic.py  run_questions_e2e.py  run_questions_polza_eval.py
tests/: query_preprocessing_benchmark_100.md  questions.json  test_apply_prepared_plan_doc_id.py  test_baseline_comparison_acceptance.py  test_chunk_quality_report.py  test_chunker_document_menu.py  test_document_catalog.py  test_document_knowledge.py  test_golden_quality_gates.py  test_human_cli.py  test_indexing_contract.py  test_knowledge_catalog_mapping.py  test_marking_payload_quality.py  test_norm_lookup_understanding.py  test_payload_required_tokens.py  test_phrase_pruning.py  test_prompt_pack_schema.py  test_pue_aliases.py  test_query_intent.py  test_query_planner.py  test_query_term_matches.py  test_query_understanding.py  test_retrieval_compare.py  test_retrieval_tools_contract.py  test_rtf_pick_paths.py  (+17 more)
(+70 files in other folders)
