[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mr-norm"
version = "0.1.0"
description = "Deterministic normative document processing and RAG corpus tools."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
rtf = ["pywin32>=306"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mr_norm.data" = ["*.json"]
"mr_norm.config" = ["prompts/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
